# py-repopie

./: .gitignore  README.md  pyproject.toml
data/: example_data.csv  example_data2.csv
data/example_output/: example.html
repopie/: cmd.py
